fix: z-index issue with lockup
- the lockup was overlaying the Drupal admin bar at small-medium screen sizes

--- a/docroot/themes/humsci/humsci_basic/src/scss/settings/_variables.zindex.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/settings/_variables.zindex.scss
@@ -17,3 +17,4 @@ $hb-z-index-12: 1200;
 // For example:
 // $hb-z-index-modal: $hb-z-index-1;
 $hb-z-index-main-menu: $hb-z-index-1;
+$hb-z-index-lockup: $hb-z-index-5; // keeps the lockup from laying on top of the admin menu
